--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:8889/cheese-mvc-data
-spring.datasource.username=cheese-mvc-data
-spring.datasource.password=cheese
+spring.datasource.url=jdbc:mysql://localhost:3306/cheese-persist
+spring.datasource.username=cheese-persist
+spring.datasource.password=persist
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -10,7 +10,7 @@ spring.jpa.database = MYSQL
 spring.jpa.show-sql = false
 
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager)
